add some style to component Product and add also working with mongo db at the server side

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,11 @@
+.main-container {
+  margin: 20px;
+}
+
+.edit-form {
+  margin: 20px;
+}
+
 .valid {
   border: 1px solid green;
 }
@@ -17,4 +25,8 @@
 .all-products table td{
   border: 1px solid black;
   width: 100px;
+}
+
+td {
+  padding: 5px;
 }
